[gd_scene load_steps=5 format=3 uid="uid://dn2xu3tbm63oc"]

[ext_resource type="Script" uid="uid://bsm2jei8m0hpi" path="res://gameplay/gui/pause_menu/pause_menu.gd" id="1_g1cyq"]
[ext_resource type="PackedScene" uid="uid://bd40777jxmmm6" path="res://gui/panel/panel.tscn" id="2_hphnj"]
[ext_resource type="FontFile" uid="uid://cjqm33jfi3sjh" path="res://fonts/Ubuntu-B.ttf" id="3_gdb5n"]
[ext_resource type="PackedScene" uid="uid://empygty13skr" path="res://gui/button/button.tscn" id="4_uem1w"]

[node name="pause_menu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_g1cyq")

[node name="center_container" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="panel" parent="center_container" instance=ExtResource("2_hphnj")]
custom_minimum_size = Vector2(500, 300)
layout_mode = 2

[node name="margin_container" type="MarginContainer" parent="center_container/panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="vbox_container" type="VBoxContainer" parent="center_container/panel/margin_container"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="title" type="Label" parent="center_container/panel/margin_container/vbox_container"]
layout_mode = 2
size_flags_vertical = 6
theme_override_fonts/font = ExtResource("3_gdb5n")
theme_override_font_sizes/font_size = 32
text = "GAME PAUSED"
horizontal_alignment = 1

[node name="resume_game" parent="center_container/panel/margin_container/vbox_container" instance=ExtResource("4_uem1w")]
layout_mode = 2
size_flags_vertical = 3
text = "Resume game (R)"

[node name="main_menu_button" parent="center_container/panel/margin_container/vbox_container" instance=ExtResource("4_uem1w")]
layout_mode = 2
size_flags_vertical = 3
text = "Main menu"

[connection signal="pressed" from="center_container/panel/margin_container/vbox_container/resume_game" to="." method="_on_resume_game_pressed"]
[connection signal="pressed" from="center_container/panel/margin_container/vbox_container/main_menu_button" to="." method="_on_main_menu_button_pressed"]
